--- a/homework1/index.html
+++ b/homework1/index.html
@@ -10,5 +10,6 @@
     <h1>Test1</h1>
     <h3>Hello, World!</h3>
     <p>Super fine.</p>
+    <p>Lorem ipsum dolor sit amet consectetur.</p>
 </body>
 </html>
