--- a/homework1/index.html
+++ b/homework1/index.html
@@ -12,5 +12,6 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, eum!</p>
     <p>Lorem, ipsum dolor.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia.</p>
+    <h1>Hello!</h1>
 </body>
 </html>
