--- a/homework15/index.html
+++ b/homework15/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <form id="form">
-    <input class="input" type="text" placeholder="Enter your DOMEN">
+    <input class="input" id="input" type="text" placeholder="Enter your DOMEN">
+    <button id="button" class="button">ENTER</button>
   </form>
   <script src="./script/script.js"></script>  
 </body>
