--- a/homework18/index.html
+++ b/homework18/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="containerPosts">
-        <div id="postId" class="postId">
+        <div id="post_Id" class="postId">
         </div>
     </div>
     <script src="./script/script.js"></script>
