--- a/homework21/index.html
+++ b/homework21/index.html
@@ -8,17 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="#" class="form">
-    <div class="container">
-       <select name="" id="" class="select">
-        <option value="" class="option">Vehicle</option>
-        <option value="" class="option">Planet</option>
-        <option value="" class="option">Starship</option>
-        </select>
-        <input type="text" class="input" placeholder="Введите id">
-        <button class="button">Добавить</button>
-    </div>
-    </form>
+    <div id="form-container" class="form-container"></div>
+    <div id="cards_container"></div>
     <script src="./script/script.js"></script>
 </body>
 </html>
