--- a/homework21/index.html
+++ b/homework21/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div id="form-container" class="form-container"></div>
-    <div id="cards_container"></div>
+    <div id="cards_container" class="cards_container">
+        <div class="lds-spinner preloader" id="preloader">
+            <div></div><div></div>
+            <div></div><div></div><div></div><div></div>
+            <div></div><div></div><div></div><div></div>
+            <div></div><div></div>
+        </div>
+    </div>
     <script src="./script/script.js"></script>
 </body>
 </html>
